--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -5,6 +5,8 @@
 
 h1 {
   text-align: center;
+  font-size: 70px;
+  letter-spacing: 1px;
 }
 
 .cards-container {
@@ -12,7 +14,7 @@ h1 {
   flex-flow: column;
   align-items: center;
   max-width: 1120px;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -108,6 +110,7 @@ h1 {
 @media only screen and (min-width: 1024px) {
   .cards-items {
     display: flex;
+    justify-content: center;
   }
 }
 
