--- a/src/components/Pages/Projects/Cards/Cards.scss
+++ b/src/components/Pages/Projects/Cards/Cards.scss
@@ -110,7 +110,7 @@ h1 {
 @media only screen and (min-width: 1024px) {
   .cards-items {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 }
 
