--- a/src/components/Pages/Projects/Cards/Cards.scss
+++ b/src/components/Pages/Projects/Cards/Cards.scss
@@ -1,10 +1,9 @@
 .cards {
-  padding: 4rem;
+  padding: 1rem;
   background: #fff;
 }
 
 h1 {
-  text-align: center;
   font-size: 70px;
   letter-spacing: 1px;
 }
@@ -12,8 +11,6 @@ h1 {
 .cards-container {
   display: flex;
   flex-flow: column;
-  align-items: center;
-  max-width: 1120px;
   width: 100%;
   margin: 0 auto;
 }
@@ -32,6 +29,7 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+  margin-bottom: 40px;
 }
 
 .cards-item-link {
@@ -40,7 +38,7 @@ h1 {
   width: 100%;
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+  filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.493));
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
@@ -65,7 +63,7 @@ h1 {
   margin-left: 10px;
   padding: 6px 8px;
   max-width: calc((100%) - 60px);
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 700;
   color: #fff;
   background-color: #1f98f4;
@@ -101,21 +99,39 @@ h1 {
   line-height: 24px;
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 480px) {
   .content-blog-container {
     width: 84%;
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 960px) {
+  .cards-item-pic-wrap::after {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .content-blog-container {
+    width: 84%;
+  }
   .cards-items {
     display: flex;
     justify-content: space-evenly;
   }
-}
 
-@media only screen and (max-width: 1024px) {
-  .cards-item {
-    margin-bottom: 2rem;
+  .cards-item-img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    transition: all 0.2s linear;
   }
 }
