--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $bg: #fff;
 // $btn--contact--hover: #d8770e;
 // $blurple: #5865f2;
 // $main--color: #0972b8;
-// $footer--bg: #303030;
+$footer--bg: #0e0f12;
 $title--font: 'Atkinson Hyperlegible', sans-serif;
 $body--font: 'IBM Plex Sans KR', sans-serif;
 // $nav-height: 80px;
