--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -7,12 +7,13 @@ video {
 }
 
 .hero-container {
-  height: 100vh;
+  background: url(../../images/hero-holder.jpg) center center/cover no-repeat;
+  height: 600px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
   object-fit: contain;
   justify-content: center;
 }
