--- a/src/components/Pages/Projects/Cards/Cards.scss
+++ b/src/components/Pages/Projects/Cards/Cards.scss
@@ -1,34 +1,16 @@
+@import '../../../../App.scss';
+
 .cards {
   padding: 1rem;
-  background: #fff;
-}
-
-h1 {
-  font-size: 70px;
-  letter-spacing: 1px;
-}
-
-.cards-container {
-  display: flex;
-  flex-flow: column;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.cards-wrapper {
-  position: relative;
-  margin: 50px 0 45px;
 }
 
 .cards-items {
-  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
 }
 
 .cards-item {
-  display: flex;
-  flex: 1;
-  margin: 0 1rem;
-  border-radius: 10px;
+  list-style-type: none;
   margin-bottom: 40px;
 }
 
@@ -47,13 +29,8 @@ h1 {
 .cards-item-pic-wrap {
   position: relative;
   width: 100%;
-  padding-top: 67%;
+  padding-top: 60%;
   overflow: hidden;
-}
-
-.fade-img {
-  animation-name: fade-img;
-  animation-duration: 2s;
 }
 
 .cards-item-pic-wrap::after {
@@ -67,7 +44,6 @@ h1 {
   font-weight: 700;
   color: #fff;
   background-color: #1f98f4;
-  box-sizing: border-box;
 }
 
 .cards-item-img {
@@ -91,47 +67,28 @@ h1 {
 
 .cards-item-info {
   padding: 20px 30px 30px;
+  background-color: $bg;
 }
 
 .cards-item-text {
-  color: #252e48;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
 }
 
-@media only screen and (min-width: 480px) {
-  .content-blog-container {
-    width: 84%;
-  }
+@media only screen and (max-width: $breakpoint--mob) {
 }
 
-@media only screen and (max-width: 960px) {
-  .cards-item-pic-wrap::after {
-    font-size: 18px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .content-blog-container {
-    width: 84%;
-  }
+@media only screen and (min-width: $breakpoint--tablet) {
   .cards-items {
-    display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-around;
   }
 
-  .cards-item-img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
+  .cards-item {
     width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    transition: all 0.2s linear;
+    margin: 20px;
   }
+}
+
+@media only screen and (min-width: $breakpoint--screen) {
 }
