--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -7,22 +7,16 @@ video {
 }
 
 .hero-container {
-  background: url(../../images/hero-holder.jpg) center center/cover no-repeat;
-  height: 600px;
+  height: 1000px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
-  object-fit: contain;
-  justify-content: center;
 }
 
 .hero-container > h1 {
   color: #fff;
   font-size: 100px;
-  margin-top: -100px;
   border-bottom: 4px solid;
+  position: absolute;
 }
 
 @media screen and (max-width: 960px) {
