--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -1,34 +1,28 @@
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  z-index: -1;
-}
-
 .hero-container {
-  height: 1000px;
+  height: 850px;
   width: 100%;
-  box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
 }
 
-.hero-container > h1 {
-  color: #fff;
-  font-size: 100px;
-  border-bottom: 4px solid;
+.forground-text {
+  width: 100%;
   position: absolute;
+  top: 80px;
+  margin: 2% 0 0 7%;
+}
+
+.forground-text > h1 {
+  color: rgb(0 0 0 / 20%);
+  font-size: 100px;
+  text-align: left;
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container > h1 {
+  .forground-text > h1 {
     font-size: 70px;
-    margin-top: -150px;
   }
 }
 
 @media screen and (max-width: 786px) {
-  .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
+  .forground-text > h1 {
   }
 }
