start of dark toggle

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
-$text: #000;
 $bg: #fff;
-$footer--bg: #0e0f12;
-$title--font: 'Atkinson Hyperlegible', sans-serif;
-$body--font: 'IBM Plex Sans KR', sans-serif;
+$dark--bg: #0e0f12;
+$text: #000;
+$dark-text: #fff;
+$title--font: 'Atkinson Hyperlegible',
+sans-serif;
+$body--font: 'IBM Plex Sans KR',
+sans-serif;
 $title--size: 70px;
 
 $breakpoint--mob: 480px;
