--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   height: 100px;
-  background-color: #0e0f12;
+  background-color: $dark--bg;
   position: unset;
   bottom: 0;
   display: flex;
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.footer-text > p {
+.footer-text>p {
   text-align: center;
   color: $bg;
 }
