--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -3,12 +3,10 @@
 .toggle-switch {
     position: relative;
     width: 75px;
-    display: inline-block;
-    vertical-align: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    text-align: left;
+    margin-left: 3em;
 
     &-checkbox {
         display: none;
@@ -18,9 +16,9 @@
         display: block;
         overflow: hidden;
         cursor: pointer;
-        border: 0 solid #bbb;
         border-radius: 20px;
-        margin: 0;
+        box-shadow: 3px 4px 10px 2px #c7c7c7;
+
     }
 
     &-inner {
@@ -36,18 +34,18 @@
             width: 50%;
             height: 34px;
             padding: 0;
-            line-height: 34px;
-            font-size: 14px;
-            color: white;
+            line-height: 36px;
+            font-size: 23px;
             font-weight: bold;
             box-sizing: border-box;
+            font-family: $toggle--font;
         }
 
         &:before {
-            content: "Dark";
-            padding-left: 10px;
-            background-color: #f90;
-            color: #fff;
+            content: "Light";
+            padding-left: 8px;
+            background-color: $dark--toggle--bg;
+            color: $dark--toggle--text;
         }
     }
 
@@ -62,10 +60,10 @@
     }
 
     &-inner:after {
-        content: "Light";
+        content: "Dark";
         padding-right: 10px;
-        background-color: $dark--bg;
-        color: $dark-text;
+        background-color: $toggle--bg;
+        color: $toggle--text;
         text-align: right;
     }
 
@@ -73,12 +71,11 @@
         display: block;
         width: 24px;
         margin: 5px;
-        background: #fff;
+        box-shadow: inset 0 0 20px 0 #262626;
         position: absolute;
         top: 0;
         bottom: 0;
         right: 40px;
-        border: 0 solid #bbb;
         border-radius: 20px;
         transition: all 0.3s ease-in 0s;
     }
