--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,40 +1,34 @@
 .navbar {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+9,ffffff+17,ffffff+100&1+0,0.95+66,0.9+84,0.5+91,0.2+96,0+100 */
-  background: -moz-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: -moz-linear-gradient(top,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: -webkit-linear-gradient(top,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(to bottom,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
   /* IE6-9 */
@@ -77,7 +71,7 @@
   grid-template-columns: repeat(4, auto);
   list-style: none;
   text-align: center;
-  width: 70vw;
+  width: 60vw;
   justify-content: start;
   margin-right: 2rem;
   padding-inline-start: 0px;
@@ -116,6 +110,15 @@
 
 .menu-icon {
   display: none;
+}
+
+.navbar-tools {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
 }
 
 @media screen and (max-width: 960px) {
