--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,18 +1,35 @@
 @import '../../App';
 
 .footer {
-  height: 100px;
-  background-color: $dark--bg;
-  position: unset;
-  bottom: 0;
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+    height: 100px;
+    background-color: #0e0f12;
+    position: unset;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.footer-text>p {
+.footer-br>p {
   text-align: center;
   color: $bg;
+}
+
+.footer > .links-grid {
+    grid-template-columns: auto auto auto auto;
+    text-align: center;
+    display: grid;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    justify-items: center;
+    width: 40%;
+}
+
+.grid-item {
+    text-align: center;
+    color: $bg;
+  font-size: 1.8rem;
 }
