--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     align-content: center;
 }
 
@@ -23,17 +22,29 @@
 }
 
 .links-grid {
-  grid-auto-rows: 90%;
-  display: grid;
-  width: 60%;
-  padding: 20px;
-  justify-items: start;
-  align-content: space-around;
+grid-auto-rows: 80px;
+    display: grid;
+    width: 60%;
+    padding: 20px;
+    justify-items: start;
+    align-content: space-between;
 }
 
 .grid-item {
   text-align: center;
   color: $bg;
+    display: flex;
+    align-items: center;
+}
+
+.grid-item > img {
+  max-width:50px;
+}
+
+.grid-item > p {
+    text-align: center;
+  color: $bg;
+      padding-left: 20px;
 }
 
 .footer-br>p {
