--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -5,14 +5,15 @@
 
 .forground-text {
   position: absolute;
-  top: 80px;
+  top: 50px;
+  right:60px;
   margin: 2% 0 0 7%;
 }
 
 .forground-text > h1 {
   color: rgb(0 0 0 / 20%);
   font-size: 100px;
-  text-align: left;
+  text-align: right;
   animation: h1 2s ease-out;
 }
 
