--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -1,5 +1,5 @@
 .hero-container {
-  height: 850px;
+  height: 680px;
   width: 100%;
 }
 
@@ -13,8 +13,8 @@
 .forground-text > h1 {
   color: rgb(0 0 0 / 20%);
   font-size: 100px;
-  text-align: right;
-  animation: h1 2s ease-out;
+  text-align: left;
+  animation: h1 3s ease-out;
 }
 
 @keyframes h1 {
