some general UI standardisation

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,10 @@ sans-serif;
 $h1--font--weight: 600;
 $body--font: 'IBM Plex Sans KR',
 sans-serif;
-$body--font--weight: 500;
-$title--size: 70px;
+$body--font--weight: 300;
+$h1--size: 70px;
+$h2--size: 30px;
+$body--size: 16px;
 
 $breakpoint--mob: 480px;
 $breakpoint--tablet: 960px;
@@ -25,7 +27,8 @@ $breakpoint--screen: 1200px;
   padding: 0;
   box-sizing: border-box;
   font-family: $body--font;
-  font-weight: $body--font--weight
+  font-weight: $body--font--weight;
+  font-size: $body--size;
 }
 
 body {
@@ -36,13 +39,15 @@ h1 {
   color: $text;
   letter-spacing: 1px;
   font-family: $title--font;
-  font-size: $title--size;
+  font-size: $h1--size;
   font-weight: $h1--font--weight;
   text-align: center;
 }
 
 h2 {
   color: $text;
+  font-family: $title--font;
+  font-size: $h2--size;
 }
 
 p {
