--- a/src/components/Sections/Projects/Cards/Cards.scss
+++ b/src/components/Sections/Projects/Cards/Cards.scss
@@ -71,8 +71,7 @@
 }
 
 .cards-item-text {
-  font-size: 16px;
-  line-height: 24px;
+  // line-height: 24px;
 }
 
 @media only screen and (max-width: $breakpoint--mob) {
