--- a/src/components/Sections/Contact/Contact.scss
+++ b/src/components/Sections/Contact/Contact.scss
@@ -20,7 +20,7 @@ display: flex;
 }
 
 .headings {
-  padding:10px;
+  padding: 1rem;
 }
 
 form {
@@ -38,7 +38,7 @@ form .row {
 
 form .contactColumn {
   height: 300px;
-  padding: 10px;
+  padding: 1rem;
     display: flex;
     flex-direction: column;
 }
