--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -15,6 +15,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
+    padding-left: 50px;
 }
 
 .footer-art {
@@ -22,12 +23,12 @@
 }
 
 .links-grid {
-grid-auto-rows: 80px;
+grid-auto-rows: 60px;
     display: grid;
     width: 60%;
     padding: 20px;
     justify-items: start;
-    align-content: space-between;
+    align-content: space-evenly;
 }
 
 .grid-item {
