--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -11,7 +11,7 @@
 }
 
 .forground-text > h1 {
-  color: rgb(148 148 148 / 50%);
+  color: rgba(104, 104, 104, 0.75);
   font-size: 100px;
   text-align: left;
   animation: h1 3s ease-out;
