--- a/src/components/Sections/Contact/Contact.scss
+++ b/src/components/Sections/Contact/Contact.scss
@@ -1,9 +1,8 @@
 @import '../../../App.scss';
 
 .contact {
-display: flex;
+display: grid;
     justify-content: center;
-    flex-wrap: wrap;
     height: 100%;
     background: #f2695c;
 }
@@ -12,7 +11,6 @@ display: flex;
   z-index: 1;
   background: #fff;
   box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
-    width: 80%;
         border: 0px solid;
     border-radius: 10px;
     margin-bottom: 50px;
