--- a/src/App.scss
+++ b/src/App.scss
@@ -10,9 +10,9 @@
 }
 
 // Font settings
-$title--font: 'Atkinson Hyperlegible',
+$title--font: 'Kanit',
 sans-serif;
-$h1--font--weight: 600;
+$h1--font--weight: 700;
 $body--font: 'IBM Plex Sans KR',
 sans-serif;
 $body--font--weight: 300;
