small changes to @media and started about section layout

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,6 +8,7 @@
     width: 100%;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: $outerPadding;
 }
 
 .footer-items {
