--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -1,3 +1,5 @@
+@import '../../App';
+
 .hero-container {
   width: 100%;
 }
@@ -27,13 +29,8 @@
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: $breakpoint--tablet) {
   .forground-text > h1 {
     font-size: 50px;
-  }
-}
-
-@media screen and (max-width: 786px) {
-  .forground-text > h1 {
   }
 }
