--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -112,7 +112,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: $breakpoint--tablet) {
   .nav-items {
     position: relative;
   }
