--- a/src/components/Sections/About/About.scss
+++ b/src/components/Sections/About/About.scss
@@ -19,13 +19,13 @@
 }
 
 .profile-pic > img {
-  max-width: 300px;
+  max-width: 100%;
   border-radius: 50%;
 }
 
 .key-info {
   display:grid;
-  padding:20px;
+  padding:0px 20px;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 20px;
@@ -40,6 +40,15 @@
 @media screen and (max-width: $breakpoint--tablet) {
 .about-container {
   flex-direction: column;
+}
+
+.picture-intro {
+  flex-direction: row;
+  align-items: center;
+}
+
+.key-info {
+  padding: 0px;
 }
 }
 
