--- a/src/components/Sections/About/About.scss
+++ b/src/components/Sections/About/About.scss
@@ -14,20 +14,19 @@
 .picture-intro {
   display: flex;
   flex-direction: column;
-  flex: fit-content;
 
 }
 
 .profile-pic > img {
-  max-width: 100%;
   border-radius: 50%;
+  width:100%;
 }
 
 .key-info {
   display:grid;
   padding:0px 20px;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, max-content);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
@@ -40,6 +39,15 @@
 @media screen and (max-width: $breakpoint--tablet) {
 .about-container {
   flex-direction: column;
+}
+
+.profile-pic {
+  width:30%;
+
+}
+.intro {
+  width:70%;
+  padding:20px;
 }
 
 .picture-intro {
