outer padding bottom added

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@ $greyLight-3: #bec8e4;
 $greyDark: #a8a8a8;
 
 // Page margin
-$outerPadding: 0px 30px;
+$outerPadding: 0px 30px 30px 30px;
 
 * {
   margin: 0;
