--- a/src/components/Sections/Contact/Contact.scss
+++ b/src/components/Sections/Contact/Contact.scss
@@ -1,19 +1,11 @@
 @import '../../../App.scss';
 
 .contact {
-display: grid;
-    justify-content: center;
-    height: 100%;
+    background-color: var(--bg);
+  padding: $outerPadding;
 }
 
-.container {
-  z-index: 1;
-  background: #fff;
-  box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
-        border: 0px solid;
-    border-radius: 10px;
-    margin-bottom: 50px;
-      padding: 20px 40px;
+.contact-container {
 }
 
 .headings {
@@ -106,7 +98,7 @@ form input[type="submit"]:hover {
   box-shadow: 0 0 40px 40px grey inset;
 }
 
-@media only screen and (max-width: $breakpoint--mob) {
+@media screen and (max-width: $breakpoint--mob) {
   form {
     flex-direction: column;
   }
@@ -116,11 +108,6 @@ width: 100%;
 
 form .contactColumn.no2 {
   width: 100%;
-}
-
-.container {
-  padding: 20px 20px;
-      width: 90%;
 }
 
 .contactColumn {
