--- a/src/components/Sections/Projects/Cards/Cards.scss
+++ b/src/components/Sections/Projects/Cards/Cards.scss
@@ -1,10 +1,10 @@
 @import '../../../../App.scss';
 
-.cards {
-  padding: 1rem;
-}
-
 .cards-items {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+display: -ms-flexbox;      /* TWEENER - IE 10 */
+display: -webkit-flex;     /* NEW - Chrome */
   display: flex;
   flex-direction: column;
 }
@@ -74,23 +74,13 @@
   // line-height: 24px;
 }
 
-@media only screen and (max-width: $breakpoint--mob) {
-}
-
-@media only screen and (min-width: $breakpoint--tablet) {
+@media screen and (min-width: $breakpoint--tablet) {
   .cards-items {
     flex-direction: row;
-    justify-content: space-around;
   }
 
   .cards-item {
     width: 100%;
     margin: 20px;
-  }
-}
-
-@media only screen and (min-width: $breakpoint--screen) {
-  .cards-item {
-    margin: 60px;
   }
 }
