--- a/src/components/Sections/Contact/Contact.scss
+++ b/src/components/Sections/Contact/Contact.scss
@@ -48,6 +48,7 @@ form .contactColumn.no2 .row textarea {
   font-weight: 500;
   border: none;
   outline: none;
+  background-color: var(--bg);
 
 }
 
