--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,17 +1,15 @@
 @import '../../App';
 
-$shadow: .3rem .3rem .6rem $greyLight-2, 
--.2rem -.2rem .5rem $white;
-$inner-shadow: inset .2rem .2rem .5rem $greyLight-2, 
-inset -.2rem -.2rem .5rem $white;
+$shadow: .3rem .3rem .6rem $greyLight-2,
+  -.2rem -.2rem .5rem $white;
+$inner-shadow: inset .2rem .2rem .5rem $greyLight-2,
+  inset -.2rem -.2rem .5rem $white;
 
 .icon {
-  grid-column: 3 / 4;
-  grid-row: 4 / 5;
-  display: flex;
-  justify-content: space-between;
 
-  &-theme, &-other, &-other {
+  &-theme,
+  &-other,
+  &-other {
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 50%;
@@ -24,20 +22,21 @@ inset -.2rem -.2rem .5rem $white;
     background-color: $greyDark;
     transition: all .5s ease;
   }
-  
+
 }
 
-.icon-theme > img {
-  width:100%;
-  height:100%;
+.icon-theme>img {
+  width: 100%;
+  height: 100%;
   margin: 5px;
 }
 
-.check:checked +.icon-theme, .icon-theme:hover {
-        box-shadow: $inner-shadow;
-        background-color: $white;
+.check:checked+.icon-theme,
+.icon-theme:hover {
+  box-shadow: $inner-shadow;
+  background-color: $white;
 }
 
 .check {
-    display: none;
+  display: none;
 }
