--- a/src/App.scss
+++ b/src/App.scss
@@ -32,11 +32,14 @@ $breakpoint--tablet: 960px;
 $breakpoint--screen: 1200px;
 
 // Toggle colours
-$white: #fff;
 $greyLight-1: #E4EBF5;
 $greyLight-2: #c8d0e7;
 $greyLight-3: #bec8e4;
 $greyDark: #a8a8a8;
+
+// Colours
+$white: #fff;
+$black: #000;
 
 // Page margin
 $outerPadding: 0px 10% 30px 10%;
