--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -119,9 +119,8 @@
   .menu-icon {
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(60%, 40%);
+    top: 15px;
+    left: 5px;
     font-size: 1.8rem;
     cursor: pointer;
   }
