--- a/src/components/Sections/About/About.scss
+++ b/src/components/Sections/About/About.scss
@@ -7,7 +7,7 @@
 
 .about-container {
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
 
 }
 
@@ -15,20 +15,18 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-align-items: center;
+  align-items: center;
 
 }
 
-
-
-.profile-pic > img {
+.profile-pic>img {
   border-radius: 50%;
-  width:100%;
+  width: 100%;
   max-width: 250px;
 }
 
 .key-info {
-  display:grid;
+  display: grid;
   padding: 0px;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, max-content);
@@ -36,7 +34,7 @@ align-items: center;
   grid-row-gap: 20px;
 }
 
-.key-info > ul {
+.key-info>ul {
   display: contents;
 
 }
@@ -48,21 +46,21 @@ align-items: center;
 
 @media screen and (max-width: $breakpoint--mob) {
   .picture-intro {
-  flex-direction: column;
-}
+    flex-direction: column;
+  }
 
-.profile-pic > img {
-  max-width: max-content;
+  .profile-pic>img {
+    max-width: max-content;
+    margin-bottom: 20px;
 
-}
+  }
 
-.intro {
-  width: 100%;
-  margin-left: 0px;
-}
+  .intro {
+    width: 100%;
+    margin-left: 0px;
+  }
 
-.key-info {
-  display: block;
+  .key-info {
+    display: block;
+  }
 }
-}
-
