--- a/src/App.scss
+++ b/src/App.scss
@@ -15,10 +15,8 @@
 }
 
 // Font settings
-$title--font: 'Kanit',
-  sans-serif;
-$body--font: 'IBM Plex Sans KR',
-  sans-serif;
+$title--font: 'Kanit', sans-serif;
+$body--font: 'IBM Plex Sans KR', sans-serif;
 $body--font--weight: 300;
 $h1--size: 70px;
 $h1--font--weight: 700;
@@ -32,7 +30,7 @@ $breakpoint--tablet: 960px;
 $breakpoint--screen: 1200px;
 
 // Toggle colours
-$greyLight-1: #E4EBF5;
+$greyLight-1: #e4ebf5;
 $greyLight-2: #c8d0e7;
 $greyLight-3: #bec8e4;
 $greyDark: #a8a8a8;
