--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,12 +1,10 @@
 @import '../../App';
 
-$shadow: .3rem .3rem .6rem $greyLight-2,
-  -.2rem -.2rem .5rem $white;
-$inner-shadow: inset .2rem .2rem .5rem $greyLight-2,
-  inset -.2rem -.2rem .5rem $white;
+$shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
+$inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
+  inset -0.2rem -0.2rem 0.5rem $white;
 
 .icon {
-
   a {
     text-decoration: none;
     color: $black;
@@ -23,13 +21,12 @@ $inner-shadow: inset .2rem .2rem .5rem $greyLight-2,
     align-items: center;
     cursor: pointer;
     background-color: $greyDark;
-    transition: all .9s ease;
+    transition: all 0.9s ease;
     font-weight: 400;
   }
-
 }
 
-.icon-blog>img {
+.icon-blog > img {
   width: 100%;
   height: 100%;
   margin: 5px;
