--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,12 +1,10 @@
 @import '../../App';
 
-$shadow: .3rem .3rem .6rem $greyLight-2,
-  -.2rem -.2rem .5rem $white;
-$inner-shadow: inset .2rem .2rem .5rem $greyLight-2,
-  inset -.2rem -.2rem .5rem $white;
+$shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
+$inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
+  inset -0.2rem -0.2rem 0.5rem $white;
 
 .icon {
-
   &-theme,
   &-other,
   &-other {
@@ -19,18 +17,17 @@ $inner-shadow: inset .2rem .2rem .5rem $greyLight-2,
     align-items: center;
     cursor: pointer;
     background-color: $greyDark;
-    transition: all .5s ease;
+    transition: all 0.5s ease;
   }
-
 }
 
-.icon-theme>img {
+.icon-theme > img {
   width: 100%;
   height: 100%;
   margin: 5px;
 }
 
-.check:checked+.icon-theme,
+.check:checked + .icon-theme,
 .icon-theme:hover {
   box-shadow: $inner-shadow;
   background-color: $white;
