--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,4 +1,4 @@
-@import '../../App';
+@import '../App/App.scss';
 
 $shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
 $inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
