--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-@import '../../App.scss';
+@import '../App/App.scss';
 
 .navbar {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+9,ffffff+17,ffffff+100&1+0,0.95+66,0.9+84,0.5+91,0.2+96,0+100 */
