--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -20,8 +20,10 @@ $body--font: 'IBM Plex Sans KR', sans-serif;
 $body--font--weight: 300;
 $h1--size: 70px;
 $h1--font--weight: 700;
+$badge--font--weight: 700;
 $h1--mob--size: 50px;
 $h2--size: 30px;
+$h3--size: 20px;
 $body--size: 16px;
 
 // Breakpoints
@@ -69,6 +71,10 @@ h2 {
   color: var(--text);
   font-family: $title--font;
   font-size: $h2--size;
+}
+
+h3 {
+  font-size: $h3--size;
 }
 
 p {
