--- a/src/components/HeroBanner/Hero.scss
+++ b/src/components/HeroBanner/Hero.scss
@@ -30,11 +30,17 @@
 }
 
 @media screen and (max-width: $breakpoint--tablet) {
+  .forground-text > h1 {
+    font-size: 60px;
+  }
+}
+
+@media screen and (max-width: $breakpoint--mob) {
   .forground-text {
     right: auto;
   }
 
   .forground-text > h1 {
-    font-size: 60px;
+    font-size: 50px;
   }
 }
