--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -23,8 +23,10 @@ $h1--font--weight: 700;
 $badge--font--weight: 700;
 $h1--mob--size: 50px;
 $h2--size: 30px;
+$h2--font--weight: 200;
 $h3--size: 20px;
 $body--size: 16px;
+$bold--weight: 400;
 
 // Breakpoints
 $breakpoint--mob: 480px;
@@ -40,6 +42,7 @@ $greyDark: #a8a8a8;
 // Colours
 $white: #fff;
 $black: #000;
+$grey: rgba(104, 104, 104, 0.75);
 
 // Page margin
 $outerPadding: 0px 10% 30px 10%;
@@ -71,6 +74,7 @@ h2 {
   color: var(--text);
   font-family: $title--font;
   font-size: $h2--size;
+  font-weight: $h2--font--weight;
 }
 
 h3 {
@@ -79,6 +83,13 @@ h3 {
 
 p {
   color: var(--text);
+}
+
+strong {
+  font-size: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-weight: $bold--weight;
 }
 
 @media screen and (max-width: $breakpoint--tablet) {
