--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -5,9 +5,7 @@ $inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
   inset -0.2rem -0.2rem 0.5rem $white;
 
 .icon {
-  &-theme,
-  &-other,
-  &-other {
+  &-theme {
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 50%;
